<resources>
    <string name="app_name">App_in_5.1</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email_register">Email</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Art Collection</string>
    <string name="nav_header_subtitle">Only for enthusiasts</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paintings">Paintings</string>
    <string name="sculptures">Sculptures</string>
    <string name="buy_art_objects">Buy Art Objects</string>
    <string name="sell_art_object">Sell Art Object</string>
    <string name="show_more_art_object">Show more</string>
    <string name="contact_owner">Contact owner</string>

    <!-- Strings used inside java classes -->
    <string name="username_key">name</string>
    <string name="art_object_ad_key">artObject</string>
    <string name="placeholder_price">4000$</string>
</resources>