<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_paintings"
            android:icon="@drawable/ic_baseline_format_paint_24"
            android:title="@string/paintings" />
        <item
            android:id="@+id/nav_sculptures"
            android:icon="@drawable/ic_baseline_accessibility_new_24"
            android:title="@string/sculptures" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/buy_art_objects" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/sell_art_object" />
    </group>
</menu>